# security_certificate_manager

./: BUILD.gn  CMakeLists.txt  OAT.xml  README.md  bundle.json  cert_manager.gni  cfi_blocklist.txt  hisysevent.yaml  xts_demo.rar
.gitee/:  CODEOWNERS
config/: BUILD.gn
config/systemCertificates/: 002c0b4f.0  7a780d93.0  8508e720.0  9482e63a.0  b0e59380.0  e35234b1.0  ecccd8db.0  feffd413.0
interfaces/kits/c/: BUILD.gn
interfaces/kits/cj/: BUILD.gn
interfaces/kits/napi/: BUILD.gn
services/cert_manager_standard/: BUILD.gn  cert_manager_service.cfg
test/: BUILD.gn
test/fuzz_test/: BUILD.gn
test/fuzz_test/certmanagerfreeuri_fuzzer/: BUILD.gn  certmanagerfreeuri_fuzzer.cpp  certmanagerfreeuri_fuzzer.h
test/fuzz_test/certmanagergetuidfromuri_fuzzer/: BUILD.gn  certmanagergetuidfromuri_fuzzer.cpp  certmanagergetuidfromuri_fuzzer.h
test/fuzz_test/cmabort_fuzzer/: BUILD.gn  cmabort_fuzzer.cpp
test/fuzz_test/cmaddauthuid_fuzzer/: BUILD.gn  cmaddauthuid_fuzzer.cpp  cmaddauthuid_fuzzer.h
test/fuzz_test/cmappcert_fuzzer/: BUILD.gn  cmappcert_fuzzer.cpp
test/fuzz_test/cmauthgrantappcertificate_fuzzer/: BUILD.gn  cmauthgrantappcertificate_fuzzer.cpp  cmauthgrantappcertificate_fuzzer.h
test/fuzz_test/cmauthlistmgr_fuzzer/: BUILD.gn  cmauthlistmgr_fuzzer.cpp  cmauthlistmgr_fuzzer.h
test/fuzz_test/cmauthmgr_fuzzer/: BUILD.gn  cmauthmgr_fuzzer.cpp  cmauthmgr_fuzzer.h
test/fuzz_test/cmcallinggetappcertlist_fuzzer/: BUILD.gn  cmcallinggetappcertlist_fuzzer.cpp  cmcallinggetappcertlist_fuzzer.h
test/fuzz_test/cmcertcommon_fuzzer/: BUILD.gn  cmcertcommon_fuzzer.cpp  cmcertcommon_fuzzer.h
test/fuzz_test/cmcertmanager_fuzzer/: BUILD.gn  cmcertmanager_fuzzer.cpp  cmcertmanager_fuzzer.h
test/fuzz_test/cmcertmanagerapi_fuzzer/: BUILD.gn  cmcertmanagerapi_fuzzer.cpp  cmcertmanagerapi_fuzzer.h  project.xml
test/fuzz_test/cmcertmanagercheck_fuzzer/: BUILD.gn  cmcertmanagercheck_fuzzer.cpp  cmcertmanagercheck_fuzzer.h
test/fuzz_test/cmcertmanagerfile_fuzzer/: BUILD.gn  cmcertmanagerfile_fuzzer.cpp  cmcertmanagerfile_fuzzer.h
test/fuzz_test/cmcertmanagerquery_fuzzer/: BUILD.gn  cmcertmanagerquery_fuzzer.cpp  cmcertmanagerquery_fuzzer.h
test/fuzz_test/cmcertmanagerservice_fuzzer/: BUILD.gn  cmcertmanagerservice_fuzzer.cpp  cmcertmanagerservice_fuzzer.h
test/fuzz_test/cmcertmanagerupdateflag_fuzzer/: BUILD.gn  cmcertmanagerupdateflag_fuzzer.cpp  cmcertmanagerupdateflag_fuzzer.h
test/fuzz_test/cmcheckandgetcommonuri_fuzzer/: BUILD.gn  cmcheckandgetcommonuri_fuzzer.cpp  cmcheckandgetcommonuri_fuzzer.h
test/fuzz_test/cmconstructcommonuri_fuzzer/: BUILD.gn  cmconstructcommonuri_fuzzer.cpp  cmconstructcommonuri_fuzzer.h
test/fuzz_test/cmcreatesession_fuzzer/: BUILD.gn  cmcreatesession_fuzzer.cpp  cmcreatesession_fuzzer.h
test/fuzz_test/cmdeletecertproperty_fuzzer/: BUILD.gn  cmdeletecertproperty_fuzzer.cpp  cmdeletecertproperty_fuzzer.h
test/fuzz_test/cmdeleteprocessInfo_fuzzer/: BUILD.gn  cmdeleteprocessInfo_fuzzer.cpp  cmdeleteprocessInfo_fuzzer.h
test/fuzz_test/cmfinish_fuzzer/: BUILD.gn  cmfinish_fuzzer.cpp
test/fuzz_test/cmfreefilenames_fuzzer/: BUILD.gn  cmfreefilenames_fuzzer.cpp  cmfreefilenames_fuzzer.h
test/fuzz_test/cmgetappcert_fuzzer/: BUILD.gn  cmgetappcert_fuzzer.cpp  cmgetappcert_fuzzer.h
test/fuzz_test/cmgetappcertlist_fuzzer/: BUILD.gn  cmgetappcertlist_fuzzer.cpp
test/fuzz_test/cmgetauthorizedapplist_fuzzer/: BUILD.gn  cmgetauthorizedapplist_fuzzer.cpp
test/fuzz_test/cmgetcertbackupdir_fuzzer/: BUILD.gn  cmgetcertbackupdir_fuzzer.cpp  cmgetcertbackupdir_fuzzer.h
test/fuzz_test/cmgetcertbackupfilepath_fuzzer/: BUILD.gn  cmgetcertbackupfilepath_fuzzer.cpp  cmgetcertbackupfilepath_fuzzer.h
test/fuzz_test/cmgetcertconfpath_fuzzer/: BUILD.gn  cmgetcertconfpath_fuzzer.cpp  cmgetcertconfpath_fuzzer.h
test/fuzz_test/cmgetcertconfuserIddir_fuzzer/: BUILD.gn  cmgetcertconfuserIddir_fuzzer.cpp  cmgetcertconfuserIddir_fuzzer.h
test/fuzz_test/cmgetcertinfo_fuzzer/: BUILD.gn  cmgetcertinfo_fuzzer.cpp
test/fuzz_test/cmgetcertlist_fuzzer/: BUILD.gn  cmgetcertlist_fuzzer.cpp
test/fuzz_test/cmgetcertmanagerappuid_fuzzer/: BUILD.gn  cmgetcertmanagerappuid_fuzzer.cpp  cmgetcertmanagerappuid_fuzzer.h
test/fuzz_test/cmgetcertorcredcount_fuzzer/: BUILD.gn  cmgetcertorcredcount_fuzzer.cpp  cmgetcertorcredcount_fuzzer.h
test/fuzz_test/cmgetdisplaynamebyuri_fuzzer/: BUILD.gn  cmgetdisplaynamebyuri_fuzzer.cpp  cmgetdisplaynamebyuri_fuzzer.h
test/fuzz_test/cmgetfilepath_fuzzer/: BUILD.gn  cmgetfilepath_fuzzer.cpp  cmgetfilepath_fuzzer.h
test/fuzz_test/cmgetnameencode_fuzzer/: BUILD.gn  cmgetnameencode_fuzzer.cpp  cmgetnameencode_fuzzer.h
test/fuzz_test/cmgetobjnamefromcertdata_fuzzer/: BUILD.gn  cmgetobjnamefromcertdata_fuzzer.cpp  cmgetobjnamefromcertdata_fuzzer.h
test/fuzz_test/cmgetrandom_fuzzer/: BUILD.gn  cmgetrandom_fuzzer.cpp  cmgetrandom_fuzzer.h
test/fuzz_test/cmgetukeycertlist_fuzzer/: BUILD.gn  cmgetukeycertlist_fuzzer.cpp  cmgetukeycertlist_fuzzer.h
test/fuzz_test/cmgeturi_fuzzer/: BUILD.gn  cmgeturi_fuzzer.cpp  cmgeturi_fuzzer.h
test/fuzz_test/cmgetusercacertlist_fuzzer/: BUILD.gn  cmgetusercacertlist_fuzzer.cpp  cmgetusercacertlist_fuzzer.h  project.xml
test/fuzz_test/cmgetusercertinfo_fuzzer/: BUILD.gn  cmgetusercertinfo_fuzzer.cpp
test/fuzz_test/cmgetusercertlist_fuzzer/: BUILD.gn  cmgetusercertlist_fuzzer.cpp  cmgetusercertlist_fuzzer.h
test/fuzz_test/cmgetx509issuenamelongformat_fuzzer/: BUILD.gn  cmgetx509issuenamelongformat_fuzzer.cpp  cmgetx509issuenamelongformat_fuzzer.h
test/fuzz_test/cmgetx509notbefore_fuzzer/: BUILD.gn  cmgetx509notbefore_fuzzer.cpp  cmgetx509notbefore_fuzzer.h
test/fuzz_test/cmgetx509serialnumber_fuzzer/: BUILD.gn  cmgetx509serialnumber_fuzzer.cpp  cmgetx509serialnumber_fuzzer.h
test/fuzz_test/cmgrantappcertificate_fuzzer/: BUILD.gn  cmgrantappcertificate_fuzzer.cpp
test/fuzz_test/cmimportukeycert_fuzzer/: BUILD.gn  cmimportukeycert_fuzzer.cpp  cmimportukeycert_fuzzer.h
test/fuzz_test/cminit_fuzzer/: BUILD.gn  cminit_fuzzer.cpp
test/hisysevent_test/: BUILD.gn
(+582 files in other folders)
